[KED-1423] Fix spacing after refactor CSS on metadata panel

--- a/src/components/metadata/styles/metadata.scss
+++ b/src/components/metadata/styles/metadata.scss
@@ -27,7 +27,7 @@
 }
 
 .pipeline-metadata__row {
-  margin: 16px 36px;
+  margin: 32px 36px;
   font-size: 1.48em;
 }
 
